--- a/.chezmoidata/packages.yaml
+++ b/.chezmoidata/packages.yaml
@@ -2,5 +2,10 @@ packages:
   darwin:
     brews:
     - 'git'
-    casks:
-    - 'google-chrome'
+    - 'nvim
+    - 'fzf'
+    - 'ripgrep'
+    - 'gcc'
+    - 'make'
+    - 'unzip'
+    - 'lazygit'
