feat: update packages

--- a/.chezmoidata/packages.yaml
+++ b/.chezmoidata/packages.yaml
@@ -9,4 +9,9 @@ packages:
     - 'make'
     - 'unzip'
     - 'lazygit'
+    - 'yazi'
+    - 'atuin'
+    - 'zoxide'
+    - 'eza'
+    - 'oh-my-posh'
     casks:
