feat: update tmux conf

--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -10,42 +10,95 @@ set-option -g status-position top
 
 set -g mouse on
 
-# List of plugins
 set -g @plugin 'tmux-plugins/tpm'
-
-# Set Color Scheme
+set -g @plugin 'tmux-plugins/tmux-online-status'
+set -g @plugin 'tmux-plugins/tmux-battery'
 set -g @plugin 'catppuccin/tmux'
 
-# Configure Color Scheme - Catppuccin
-set -g @catppuccin_status_background "default"
+# Configure Catppuccin
+set -g @catppuccin_flavor "mocha"
+set -g @catppuccin_status_background "none"
+set -g @catppuccin_window_status_style "none"
+set -g @catppuccin_pane_status_enabled "off"
+set -g @catppuccin_pane_border_status "off"
 
-set -g @catppuccin_window_left_separator ""
-set -g @catppuccin_window_right_separator " "
-set -g @catppuccin_window_middle_separator " █"
-set -g @catppuccin_window_number_position "right"
+# Configure Online
+set -g @online_icon "ok"
+set -g @offline_icon "nok"
 
-set -g @catppuccin_window_default_fill "number"
-set -g @catppuccin_window_default_text "#W"
+# status left look and feel
+set -g status-left-length 100
+set -g status-left ""
+set -ga status-left "#{?client_prefix,#{#[bg=#{@thm_red},fg=#{@thm_bg},bold]  #S },#{#[bg=#{@thm_bg},fg=#{@thm_green}]  #S }}"
+set -ga status-left "#[bg=#{@thm_bg},fg=#{@thm_overlay_0},none]│"
+set -ga status-left "#[bg=#{@thm_bg},fg=#{@thm_maroon}]  #{pane_current_command} "
+set -ga status-left "#[bg=#{@thm_bg},fg=#{@thm_overlay_0},none]│"
+set -ga status-left "#[bg=#{@thm_bg},fg=#{@thm_blue}]  #{=/-32/...:#{s|$USER|~|:#{b:pane_current_path}}} "
+set -ga status-left "#[bg=#{@thm_bg},fg=#{@thm_overlay_0},none]#{?window_zoomed_flag,│,}"
+set -ga status-left "#[bg=#{@thm_bg},fg=#{@thm_yellow}]#{?window_zoomed_flag,  zoom ,}"
+set -ga status-left "#[bg=none]"
 
-set -g @catppuccin_window_current_fill "number"
-set -g @catppuccin_window_current_text "#W"
+# status right look and feel
+set -g status-right-length 100
+set -g status-right ""
+set -ga status-right "#[bg=none,fg=#{@thm_blue}] 󰭦 %Y-%m-%d 󰅐 %H:%M "
 
-set -g @catppuccin_status_modules_right "session time"
-set -g @catppuccin_status_left_separator  " "
-set -g @catppuccin_status_right_separator ""
-set -g @catppuccin_status_fill "icon"
-set -g @catppuccin_status_connect_separator "no"
+# bootstrap tpm
+if "test ! -d ~/.tmux/plugins/tpm" \
+   "run 'git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm && ~/.tmux/plugins/tpm/bin/install_plugins'"
 
-set -g @catppuccin_directory_text "#{b:pane_current_path}"
-
-# Other examples:
-# set -g @plugin 'github_username/plugin_name'
-# set -g @plugin 'github_username/plugin_name#branch'
-# set -g @plugin 'git@github.com:user/plugin'
-# set -g @plugin 'git@bitbucket.com:user/plugin'
-
-set-environment -g PATH "/usr/local/bin:/bin:/usr/bin"
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-#run '~/.tmux/plugins/catppuccin/catppuccin.tmux'
 run '~/.tmux/plugins/tpm/tpm'
+
+# Configure Tmux
+set -g status-position top
+# set -g status-style "bg=none"
+set -g status-justify "absolute-centre"
+
+# pane border look and feel
+setw -g pane-border-status top
+setw -g pane-border-format ""
+setw -g pane-active-border-style "bg=none,fg=#{@thm_overlay_0}"
+setw -g pane-border-style "bg=none,fg=#{@thm_surface_0}"
+setw -g pane-border-lines single
+
+# window look and feel
+set -wg automatic-rename on
+set -g automatic-rename-format "Window"
+
+set -g window-status-format " #I#{?#{!=:#{window_name},Window},: #W,} "
+set -g window-status-style "bg=none,fg=#{@thm_rosewater}"
+set -g window-status-last-style "bg=none,fg=#{@thm_peach}"
+set -g window-status-activity-style "bg=#{@thm_red},fg=#{@thm_bg}"
+set -g window-status-bell-style "bg=#{@thm_red},fg=#{@thm_bg},bold"
+set -gF window-status-separator "#[bg=none,fg=#{@thm_overlay_0}]│"
+
+set -g window-status-current-format " #I#{?#{!=:#{window_name},Window},: #W,} "
+set -g window-status-current-style "bg=#{@thm_peach},fg=#{@thm_bg},bold"
+# setw -g pane-border-status off
+set -g @catppuccin_status_background "none"
+set-environment -g PATH "/usr/local/bin:/bin:/usr/bin"
+
+bind-key "t" run-shell "sesh connect \"$(
+  sesh list --icons | fzf-tmux -p 90%,70% \
+    --no-sort --ansi --border-label ' sesh ' --prompt '⚡  ' \
+    --header '  ^a all ^t tmux ^g configs ^x zoxide ^d tmux kill ^f find' \
+    --bind 'tab:down,btab:up' \
+    --bind 'ctrl-a:change-prompt(⚡  )+reload(sesh list --icons)' \
+    --bind 'ctrl-t:change-prompt(🪟  )+reload(sesh list -t --icons)' \
+    --bind 'ctrl-g:change-prompt(⚙️  )+reload(sesh list -c --icons)' \
+    --bind 'ctrl-x:change-prompt(📁  )+reload(sesh list -z --icons)' \
+    --bind 'ctrl-f:change-prompt(🔎  )+reload(fd -H -d 2 -t d -E .Trash . ~)' \
+    --bind 'ctrl-d:execute(tmux kill-session -t {2..})+change-prompt(⚡  )+reload(sesh list --icons)' \
+    --preview-window 'right:45%' \
+    --preview 'sesh preview {}'
+)\""
+
+bind-key 0 if-shell 'tmux select-window -t :0' '' 'new-window -t :0'
+bind-key 1 if-shell 'tmux select-window -t :1' '' 'new-window -t :1'
+bind-key 2 if-shell 'tmux select-window -t :2' '' 'new-window -t :2'
+
+# # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+# run '~/.config/tmux/plugins/tmux/catppuccin.tmux'
+# run '~/.tmux/plugins/tpm/tpm'
 
