feat: update tmux

--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -1,4 +1,4 @@
-
+set-environment -g PATH "/opt/homebrew/bin:$PATH"
 # remap prefix
 unbind C-b
 set -g prefix C-space
@@ -100,5 +100,5 @@ bind-key 2 if-shell 'tmux select-window -t :2' '' 'new-window -t :2'
 
 # # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 # run '~/.config/tmux/plugins/tmux/catppuccin.tmux'
-# run '~/.tmux/plugins/tpm/tpm'
+run '~/.tmux/plugins/tpm/tpm'
 
